--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<rsb.version>[0.13,)</rsb.version>
+		<rsb.version>[0.13,0.14-SNAPSHOT)</rsb.version>
 	</properties>
 
 	<dependencies>
