introduce arbitration service

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,99 @@
 		<dependency>
 			<groupId>rsb</groupId>
 			<artifactId>rst-sandbox-csra</artifactId>
-			<version>[0.13.252,)</version>
+			<version>[0.13.254,)</version>
+		</dependency>
+		<dependency>
+			<groupId>net.time4j</groupId>
+			<artifactId>time4j-core</artifactId>
+			<version>4.15</version>
+		</dependency>
+		<dependency>
+			<groupId>net.time4j</groupId>
+			<artifactId>time4j-misc</artifactId>
+			<version>4.15</version>
+		</dependency>
+		<dependency>
+			<groupId>net.time4j</groupId>
+			<artifactId>time4j-range</artifactId>
+			<version>4.15</version>
+		</dependency>
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13</version>
 		</dependency>
 	</dependencies>
+	
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.8.1</version>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>assemble</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repositoryName>share/repository</repositoryName>
+					<programs>
+						<program>
+							<mainClass>de.citec.csra.allocation.srv.Allocator</mainClass>
+							<id>csra-allocation-server</id>
+							<platforms>
+								<platform>unix</platform>
+							</platforms>
+						</program>
+						<program>
+							<mainClass>de.citec.csra.allocation.vis.MovingChart</mainClass>
+							<id>csra-allocation-viewer</id>
+							<platforms>
+								<platform>unix</platform>
+							</platforms>
+						</program>
+					</programs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
