--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.13,0.14-SNAPSHOT)</rsb.version>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>rsb</groupId>
@@ -53,9 +53,15 @@
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.13</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
-		<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
