--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.13,0.14-SNAPSHOT)</rsb.version>
+	 <netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
 	
 	<dependencies>
