--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,19 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.13,0.14-SNAPSHOT)</rsb.version>
-	 <netbeans.hint.license>gpl30</netbeans.hint.license>
+		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
+	<repositories>
+		<repository>
+			<id>citec-releases</id>
+			<name>CITEC Maven Repository Server</name>
+			<url>https://mvn.cit-ec.de/nexus/content/repositories/releases/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
 	
 	<dependencies>
 		<dependency>
