add support for scxml loading

--- a/src/main/resources/etc/coordination/durations.properties
+++ b/src/main/resources/etc/coordination/durations.properties
@@ -1,8 +1,10 @@
 #auto-saved
-#Fri Jun 17 14:31:57 CEST 2016
+#Thu Jul 28 14:42:50 CEST 2016
 goodbye=500
+/coordination/scenario/kitchen/=10000
 greet=5000
 /arbitration/test/something/useless/=5507
+/coordination/scenario/learn/=10000
 explain=10000
 intro=10000
 list=7000
