--- a/src/main/resources/etc/coordination/resources.properties
+++ b/src/main/resources/etc/coordination/resources.properties
@@ -1,8 +1,10 @@
 #auto-saved
-#Fri Jun 17 14:31:57 CEST 2016
+#Thu Jul 28 14:42:50 CEST 2016
 goodbye=/dialogtasks/rgoodbye
+/coordination/scenario/kitchen/=Kitchen
 greet=/dialogtasks/rgreeting\:/dialogtasks/wurst
-/arbitration/test/something/useless/=something-important\:/test/something/useless/
+/arbitration/test/something/useless/=/test/something/useless/\:something-important
+/coordination/scenario/learn/=Wardrobe
 explain=/dialogtasks/explain
 intro=/dialogtasks/intro
 list=/dialogtasks/list
