--- a/src/main/resources/etc/coordination/scxml.properties
+++ b/src/main/resources/etc/coordination/scxml.properties
@@ -1,9 +1,9 @@
 #auto-saved
 #Thu Jul 28 14:42:50 CEST 2016
 goodbye=/dialogtasks/rgoodbye
-/coordination/scenario/kitchen/=coordinationscenariokitchen
+/coordination/scenario/kitchen/=Kitchen.xml
 /arbitration/test/something/useless/=/test/something/useless/
-/coordination/scenario/learn/=coordinationscenariolearn
+/coordination/scenario/learn/=Learn.xml
 explain=/dialogtasks/explain
 intro=/dialogtasks/intro
 list=/dialogtasks/list
