--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 			<version>4.15</version>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
+			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.0.13</version>
+			<version>1.0.19</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
