--- a/src/main/resources/etc/coordination/scxml.properties
+++ b/src/main/resources/etc/coordination/scxml.properties
@@ -4,6 +4,7 @@ goodbye=/dialogtasks/rgoodbye
 /coordination/scenario/kitchen/=Kitchen.xml
 /arbitration/test/something/useless/=/test/something/useless/
 /coordination/scenario/learn/=Learn.xml
+/coordination/scenario/goodbye/=Goodbye.xml
 explain=/dialogtasks/explain
 intro=/dialogtasks/intro
 list=/dialogtasks/list
