--- a/src/main/resources/etc/coordination/durations.properties
+++ b/src/main/resources/etc/coordination/durations.properties
@@ -5,6 +5,7 @@ goodbye=500
 greet=5000
 /arbitration/test/something/useless/=5507
 /coordination/scenario/learn/=10000
+/coordination/scenario/goodbye/=90000
 explain=10000
 intro=10000
 list=7000
