--- a/src/main/resources/etc/coordination/resources.properties
+++ b/src/main/resources/etc/coordination/resources.properties
@@ -5,6 +5,7 @@ goodbye=/dialogtasks/rgoodbye
 greet=/dialogtasks/rgreeting\:/dialogtasks/wurst
 /arbitration/test/something/useless/=/test/something/useless/\:something-important
 /coordination/scenario/learn/=Wardrobe
+/coordination/scenario/goodbye/=robot\:something-something
 explain=/dialogtasks/explain
 intro=/dialogtasks/intro
 list=/dialogtasks/list
