--- a/src/main/resources/etc/coordination/scxml.properties
+++ b/src/main/resources/etc/coordination/scxml.properties
@@ -1,6 +1,6 @@
 #auto-saved
 #Thu Jul 28 14:42:50 CEST 2016
-goodbye=/dialogtasks/rgoodbye
+goodbye=Goodbye.xml
 /coordination/scenario/kitchen/=Kitchen.xml
 /arbitration/test/something/useless/=/test/something/useless/
 /coordination/scenario/learn/=Learn.xml
