--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.15,0.16-SNAPSHOT)</rsb.version>
+		<rsu.version>0.1-SNAPSHOT</rsu.version>
+		<rta.version>1.0-SNAPSHOT</rta.version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
 	<repositories>
@@ -43,7 +45,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rst-utils</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${rsu.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
@@ -53,7 +55,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rta-lib</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${rta.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
