--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.15,)</rsb.version>
 		<rsu.version>[0.1,)</rsu.version>
-		<rta.version>[1.0,)</rta.version>
+		<rta.version>[1.1-SNAPSHOT,)</rta.version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
 	<repositories>
