--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.15,)</rsb.version>
-		<rsu.version>[0.1,)</rsu.version>
+		<rsu.version>[0.2-SNAPSHOT,)</rsu.version>
 		<rta.version>[1.1-SNAPSHOT,)</rta.version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
