--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.15.0,)</rsb.version>
-		<rsu.version>[0.2.0,)</rsu.version>
-		<rta.version>[1.1.0,)</rta.version>
+		<rsu.version>0.3-SNAPSHOT</rsu.version>
+		<rta.version>1.3-SNAPSHOT</rta.version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
 	<repositories>
