--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<rsb.version>[0.15.0,0.16-SNAPSHOT)</rsb.version>
-		<rsu.version>[0.2.0,0.3-SNAPSHOT)</rsu.version>
-		<rta.version>[1.1.0,1.2-SNAPSHOT)</rta.version>
+		<rsu.version>[0.2.0,0.3-RC1)</rsu.version>
+		<rta.version>[1.1.0,1.2-RC1)</rta.version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
 	</properties>
 	<repositories>
