--- a/pom.xml
+++ b/pom.xml
@@ -1,147 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.citec.csra</groupId>
-	<artifactId>arbitration-service</artifactId>
-	<version>0.15.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<rsb.version>[0.17.0,0.18-SNAPSHOT)</rsb.version>
-		<rsu.version>0.4.0</rsu.version>
-		<rta.version>1.4.0</rta.version>
-		<netbeans.hint.license>gpl30</netbeans.hint.license>
-	</properties>
-	<repositories>
-		<repository>
-			<id>citec-releases</id>
-			<name>CITEC Maven Repository Server</name>
-			<url>https://mvn.cit-ec.de/nexus/content/repositories/releases/</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
-	
-	<dependencies>
-		<dependency>
-			<groupId>rsb</groupId>
-			<artifactId>rsb</artifactId>
-			<version>${rsb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>rsb</groupId>
-			<artifactId>rst-sandbox</artifactId>
-			<version>${rsb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>rsb</groupId>
-			<artifactId>rst</artifactId>
-			<version>${rsb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>rst-utils</artifactId>
-			<version>${rsu.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jfree</groupId>
-			<artifactId>jfreechart</artifactId>
-			<version>1.0.19</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>rta-lib</artifactId>
-			<version>${rta.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>appassembler-maven-plugin</artifactId>
-				<version>1.8.1</version>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<goals>
-							<goal>assemble</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<repositoryName>share/repository</repositoryName>
-					<programs>
-						<program>
-							<mainClass>de.citec.csra.allocation.srv.Allocator</mainClass>
-							<id>csra-allocation-server</id>
-							<platforms>
-								<platform>unix</platform>
-							</platforms>
-						</program>
-						<program>
-							<mainClass>de.citec.csra.arbitration.srv.Arbitration</mainClass>
-							<id>csra-arbitration-server</id>
-							<platforms>
-								<platform>unix</platform>
-							</platforms>
-						</program>
-						<program>
-							<mainClass>de.citec.csra.allocation.vis.MovingChart</mainClass>
-							<id>csra-allocation-viewer</id>
-							<platforms>
-								<platform>unix</platform>
-							</platforms>
-						</program>
-					</programs>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>de.citec.csra</groupId>
+    <artifactId>arbitration-service</artifactId>
+    <version>0.15.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <dependency.rsx.version>[0.18,0.19-alpha)</dependency.rsx.version>
+        <rsu.version>[0.5,0.6-alpha)</rsu.version>
+        <rta.version>[1.5,1.6-alpha)</rta.version>
+        <netbeans.hint.license>gpl30</netbeans.hint.license>
+    </properties>
+    <repositories>
+        <repository>
+            <id>citec-releases</id>
+            <name>CITEC Maven Repository Server</name>
+            <url>https://mvn.cit-ec.de/nexus/content/repositories/releases/</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>rsb</groupId>
+            <artifactId>rsb</artifactId>
+            <version>${dependency.rsx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>rsb</groupId>
+            <artifactId>rst-sandbox</artifactId>
+            <version>${dependency.rsx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>rsb</groupId>
+            <artifactId>rst</artifactId>
+            <version>${dependency.rsx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rst-utils</artifactId>
+            <version>${rsu.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rta-lib</artifactId>
+            <version>${rta.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <repositoryName>share/repository</repositoryName>
+                    <programs>
+                        <program>
+                            <mainClass>de.citec.csra.allocation.srv.Allocator</mainClass>
+                            <id>csra-allocation-server</id>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                        </program>
+                        <program>
+                            <mainClass>de.citec.csra.arbitration.srv.Arbitration</mainClass>
+                            <id>csra-arbitration-server</id>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                        </program>
+                        <program>
+                            <mainClass>de.citec.csra.allocation.vis.MovingChart</mainClass>
+                            <id>csra-allocation-viewer</id>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                        </program>
+                    </programs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
